# CUDATests

./: CMakeLists.txt  README.md  generate.cpp  test1.cpp  test2.cu
